# ANN

./: .gitignore  CMakeLists.txt  README.md  ann.cpp  ann.hpp  dataset.cpp  dataset.hpp  example.csv  layer.cpp  layer.hpp  matrix.cpp  matrix.hpp  perceptron.cpp  perceptron.hpp  utils.cpp
examples/heart_disease/: 60l3weights83.csv  60l3weights85.csv  70l1weights71.csv  70l3weights82.csv  70weights81.csv  90weights73.csv  90weights80.csv  heart_disease.csv  nweights83.csv  weights73.csv  weights75.csv  weights80.csv  weights83.csv  weights86.csv  weights90.csv
examples/iris_flower/: IRIS.csv  weights80.csv  weights83.csv  weights86.csv
examples/pulsar_stars/: weights91.csv
include/: ann.hpp  argparser.hpp  dataset.hpp  layer.hpp  matrix.hpp  metric.hpp  perceptron.hpp
src/: activation_functions.h  ann.cpp  dataset.cpp  layer.cpp  matrix.cpp  perceptron.cpp  test.cpp
